app/styles/_logs.scss
#logs {

    #loader{
        display: inline-block;
    }

    #main-content-panel {
        padding-right: 0;
    }
    .content-section {
        display: block;
        height: 100%;

        .logs-container{
            width: 100%;
            position: relative;
            display: inline-block;
            .filters {
                position: relative;
                margin: 0 0 10px;
                max-width: 85%;
                min-width: 200px;
                float: left;

                .multiSelectMenu {
                    margin: 5px 10px 0 0;
                    vertical-align: middle;
                }
                .filter {
                    display: inline-table;
                    margin: 0 0 10px;
                }
                .input-container {
                    margin: 5px 10px 0 0;
                    vertical-align: middle;
                    position: relative;
                }
                .time-range{
                    padding-right: 20px;
                }
                .time-range-icon{
                    position: absolute;
                    top:9px;
                    right:5px;
                }
            }
            .actions {
                margin-top: 27px;
                max-width: 15%;
                min-width:143px;
                float: right;
            }
        }
        .emptyTable {
            display: block;
            text-align: center;
            padding: 20px;
        }

        .logs-error-message {
            margin-bottom: 10px;
            display:inline-block;

            a, a:hover {
                font-weight: bold;
            }
            a {
                color: #f00;
            }
            a:hover {
                color: #dc143c;
            }
        }
        .gs-table {
            width: 100%;
            margin: 0;

            th {
                padding: 0;

                .header {
                    display: table;
                    height: 100%;
                    width: 100%;

                    .header-text {
                        vertical-align: middle;
                        display: table-cell;
                        padding: 5px 0 5px 10px;
                    }
                }
            }
            td {

                &.type {
                    width: 150px;
                }
                &.icon-events {
                    width: 60px;
                    min-width: 45px;

                    &.gs-icon-logs {
                        padding-left: 6px;
                        font-size: 40px;
                        line-height: 40px;
                    }
                }
                &.node, &.task, &.workflow {
                    width: 110px;
                }
                &.task {
                    width: auto;
                    min-width: 330px;
                    word-break: break-word;
                }
                &.date {
                    width: 200px;
                }
                &.event-text-green {
                    color: $COSMOUI_EVENTS_LIST_TEXT_SUCCESS;
                }
                &.event-text-red {
                    color: $COSMOUI_EVENTS_LIST_TEXT_FAILED;
                }
                &.details {
                    padding-left: 0;

                    .message-text {
                        padding-bottom: 10px;
                        font-size: 13px;
                        margin: 0 10px;
                    }
                    .group {
                        padding-left: 6px;
                    }
                    pre {
                        max-width: 1380px;
                        margin-left: auto;
                        margin-right: auto;
                        margin-top: 5px;
                    }
                }

                .large-text-overflow {
                    max-width: 510px;
                    white-space: nowrap;
                    text-overflow: ellipsis;
                    overflow-x: hidden;
                }
            }
        }
    }
}

